Another attempt to fix weird font sizing in tables on mobile

--- a/product_site/css/style.css
+++ b/product_site/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #ffe9d4;
     max-width:100ch;
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 h1 {
